--- a/src/components/blocks/About/style.module.css
+++ b/src/components/blocks/About/style.module.css
@@ -28,25 +28,6 @@
   height: 446px;
   background-color: #C4E2FF;
   flex-shrink: 0;
-
-  @media (max-width: 1279px) {
-    width: 360px;
-    height: 360px;
-  }
-
-  @media (max-width: 1024px) {
-    width: 250px;
-    height: 250px;
-  }
-
-  @media (max-width: 768px) {
-    width: 400px;
-    height: 400px;
-    position: absolute;
-    right: 50%;
-    top: 50%;
-    transform: translateY(-50%) translateX(50%);
-  }
 }
 
 .container::before {
@@ -61,20 +42,45 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top 37px right 0;
+}
 
-  @media (max-width: 1279px) {
+@media (max-width: 1279px) {
+  .container::after {
+    width: 360px;
+    height: 360px;
+  }
+
+  .container::before {
     right: 157px;
     background-size: contain;
     background-position: center;
     width: 187px;
   }
+}
 
-  @media (max-width: 1024px) {
+@media (max-width: 1024px) {
+  .container::after {
+    width: 250px;
+    height: 250px;
+  }
+
+  .container::before {
     right: 130px;
     width: 147px;
   }
+}
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
+  .container::after {
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    right: 50%;
+    top: 50%;
+    transform: translateY(-50%) translateX(50%);
+  }
+
+  .container::before {
     content: none;
   }
 }
