--- a/src/components/ui/Checkbox/style.module.css
+++ b/src/components/ui/Checkbox/style.module.css
@@ -48,8 +48,10 @@
   background-image: url("/src/assets/img/form/check.svg");
   background-repeat: no-repeat;
   background-position: bottom 0 right 50%;
+}
 
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
+  .text::before {
     width: 8px;
     height: 8px;
     left: 4px;
