--- a/src/components/ui/Checkbox/style.module.css
+++ b/src/components/ui/Checkbox/style.module.css
@@ -29,12 +29,6 @@
   height: 24px;
   background-color: #F6F6F6;
   border: 1px solid rgba(0, 0, 0, 0.1);
-
-  @media (max-width: 768px) {
-    width: 15px;
-    height: 15px;
-    order: -1;
-  }
 }
 
 .text::before {
@@ -51,6 +45,12 @@
 }
 
 @media (max-width: 768px) {
+  .text::after {
+    width: 15px;
+    height: 15px;
+    order: -1;
+  }
+
   .text::before {
     width: 8px;
     height: 8px;
